# $Id$

SUBDIRS = \
	m4 \
	build \
	resources \
	libgwy \
	libgwyui \
	libgwyapp \
	gwyddion \
	modules \
	po \
	po-libgwy \
	po-libgwyui \
	po-libgwyapp \
	docs \
	data

EXTRA_DIST = \
	gwyddion4.spec \
	INSTALL.gwyddion

ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
MAINTAINERCLEANFILES = \
	gwyddion4.spec
